[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comai_ricopinazo"
dynamic = ["version"]
authors = [
  { name="Pedro Rico", email="ricopinazo@gmail.com" },
]
description = "AI powered console assistant"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Operating System :: MacOS",
    "Operating System :: Unix",
]
dependencies = [
  "openai",
  "appdirs",
  "cryptography",
  "termcolor",
  "getch",
]

[project.urls]
repository = "https://github.com/ricopinazo/comai"

[project.scripts]
comai = "comai_ricopinazo.cli:main"

[project.optional-dependencies]
test = [
    "pytest",
    "hatchling",
    "python-dotenv"
]

[tool.hatch.version]
path = "src/comai_ricopinazo/__init__.py"
