[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comai"
dynamic = ["version"]
authors = [
  { name="Pedro Rico", email="ricopinazo@gmail.com" },
]
description = "AI powered console assistant"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Operating System :: MacOS",
    "Operating System :: Unix",
]
dependencies = [
  "openai==0.27.5",
  "appdirs==1.4.4",
  "cryptography==40.0.2",
  "termcolor==2.3.0",
  "getch==1.0",
]

[project.urls]
homepage = "https://github.com/ricopinazo/comai"
repository = "https://github.com/ricopinazo/comai"
issues = "https://github.com/ricopinazo/comai/issues"

[project.scripts]
comai = "comai.cli:main"

[project.optional-dependencies]
test = [
    "pytest",
    "hatchling",
    "python-dotenv"
]

[tool.hatch.version]
path = "src/comai/__init__.py"
